ch4/exercise4.24/exercise4.24.txt
Our program that distinguished between high pass, pass, fail depended on the 
fact that the conditional operator is right associative. Describe how that 
operator would be evaluated if the operator were left associative.

The original code is shown as following.

    finalgrade = (grade > 90) ? "high pass" : (grade < 60) ? "fail" : "pass";

If the conditional operator is left associative, I will parenthesize the 
expression as following.

    finalgrade = ((grade > 90) ? "high pass" : (grade < 60)) ? "fail" : "pass";

String cannot be converted to boolean and boolean cannot be converted to string.
The two expressions in a conditional operator must have the same type or types
tha can be converted to a common type. Therefore, the first conditional
operator cannot meet this requirement. This expression is an error.


test2.cpp:25:32: error: operands to ?: have different types ‘const char*’ and ‘bool’
   25 |     finalgrade = ((grade > 90) ? "high pass" : (grade < 60)) ? "fail" : "pass";
      |                   ~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~

